--- a/Pipfile
+++ b/Pipfile
@@ -14,15 +14,14 @@ pyyaml = ">=5.3.1"
 requests = ">=2.23.0"
 scipy = ">=1.4.1"
 thop = ">=0.1.1"
-torch = "*"
 torchvision = ">=0.9.0"
 tqdm = ">=4.64.0"
 ultralytics = ">=8.0.147"
 pandas = ">=1.1.4"
 seaborn = ">=0.11.0"
+torch = ">=1.8.0"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.7"
